<resources>
    <string name="app_name">musicPlayer</string>
    <string name="previous">Précédent</string>
    <string name="pause">Pause</string>
    <string name="next">Suivant</string>
    <string name="back">Retour</string>
    <string name="validate">Valider</string>
    <string name="cancel">Annuler</string>
    <string name="delete">Supprimer</string>
    <string name="music_disk">Image de la musique</string>
    <string name="separateur_nom_durer">" \u25CF "</string>
    <string name="song">Musique</string>
    <string name="playlist">Playlist</string>
    <string name="menu_option">Menu</string>
    <string name="ajouter_music_playlist">Ajouter à une playlist</string>
    <string name="info_music">Information sur la musique</string>
    <string name="retirer_music_playlist">Retirer de la playlist</string>
</resources>
