<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/albumImage"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linearLayoutText"
        android:scaleType="fitCenter"
        android:src="@drawable/music"
        android:adjustViewBounds="true"
        android:contentDescription="@string/music_disk"/>

    <LinearLayout
        android:id="@+id/linearLayoutText"
        android:layout_width="0dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/albumImage"
        app:layout_constraintEnd_toStartOf="@+id/menuButton"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingStart="10dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="Titre"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="0dp">
            <TextView
                android:id="@+id/artist"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:text="Artist"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="12sp"
                android:text="@string/separateur_nom_durer"
                android:textColor="@color/grey"/>

            <TextView
                android:id="@+id/duration"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:text="Durer"/>

        </LinearLayout>
    </LinearLayout>

    <ImageButton
        android:id="@+id/menuButton"
        android:layout_width="50dp"
        android:layout_height="70dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:contentDescription="@string/menu_option"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayoutText"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/menu"
        android:background="@android:color/transparent"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_gravity="center_vertical"/>
</androidx.constraintlayout.widget.ConstraintLayout>